# qa-fork-1779981985-poetry-git-dependency

./: README.md  autotest_config.json  pyproject.toml
